manifests/test-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpd
  name: httpd
  namespace: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  strategy: {}
  template:
    metadata:
      labels:
        app: httpd
    spec:
      volumes:
        - name: httpcontent
          configMap:
            name: httpcontent
      containers:
      - image: httpd
        name: httpd
        volumeMounts:
          - name: httpcontent
            mountPath: /usr/local/apache2/htdocs/
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "500m"
