manifests/test-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app
  namespace: test-app
  annotations:
    # cert-manager.io/issuer-group: cert-manager.io/v1
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer: my-ca-issuer
    cert-manager.io/common-name: test-app.example.com
    cert-manager.io/usages: "server auth"
spec:
  tls:
    - hosts:
        - test-app.example.com
      secretName: test-app-example-com-tls
  rules:
    - host: test-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpd
                port:
                  number: 80
  ingressClassName: "nginx"
